tests/invalid/simple/ListAppend_Invalid_1.whiley
int f([string] r):
    return |r|
 
void System::main([string] args):
    r = args + [1]
    f(r)
    print str(r)
